--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -20,11 +20,11 @@
     "java.import.gradle.wrapper.enabled": true,
     "java.configuration.runtimes": [{
         "name": "JavaSE-17",
-        "path": "~/.sdkman/candidates/java/17.0.3-tem",
-        "default": true
+        "path": "~/.sdkman/candidates/java/17.0.6-tem",
     }, {
         "name": "JavaSE-1.8",
-        "path": "~/.sdkman/candidates/java/8.0.332-librca"
+        "path": "~/.sdkman/candidates/java/8.0.362-zulu/zulu-8.jdk/Contents/Home",
+        "default": true
     }],
 
     "yaml.customTags": [
