--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1460,7 +1460,7 @@ macos_option_as_alt yes
 #: The full list of actions that can be mapped to key presses is
 #: available here </actions>.
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
