Set mod+l to next layout in kitty

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1821,7 +1821,7 @@ kitty_mod ctrl+shift
 
 #: Next layout
 
-# map kitty_mod+l next_layout
+map kitty_mod+l next_layout
 
 
 #: You can also create shortcuts to switch to specific layouts::
